--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
               <h1 class="about-me-header">About Me</h1>
               <hr class="about-me-hr"/>
               <img src="assets/imgs/natebeach.jpeg" alt="" id="nate-image"/>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              <p>My name is Nathaniel Dent. Id like this site to offer more, but sadly I am still learning, and thus a baby at web development. My goal is to piece this all together as time goes on</p>
               <br />
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+              <p></p>
             </article>
           </div>
           <div class="col-md-4">
