--- a/portfolio.html
+++ b/portfolio.html
@@ -58,7 +58,7 @@
               <h1 class="port-header">Portfolio</h1>
               <hr class="port-hr"/>
               <img class="port-imgs" src="/Users/mixedguy/Desktop/Casework/Bootstrap-Portfolio/assets/images/Screen Shot 2018-02-15 at 3.44.44 PM.png" alt="">
-              <img class="port-imgs" src="http://lorempixel.com/233/166" alt="">
+              <img class="port-imgs" src="/Users/mixedguy/Desktop/Casework/week-4-game/index.html" alt="">
               <img class="port-imgs" src="http://lorempixel.com/233/166" alt="">
               <img class="port-imgs" src="http://lorempixel.com/233/166" alt="">
               <img class="port-imgs" src="http://lorempixel.com/233/166" alt="">
