--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
     <!-- Our own CSS stylesheet -->
-    <link rel="stylesheet" href="/Users/mixedguy/Desktop/Casework/portfolio/assets/css/style.css" media="screen">
+    <link rel="stylesheet" href="assets/css/style.css" media="screen">
 
   </head>
 
@@ -57,7 +57,7 @@
             <section id="portfolio-area">
               <h1 class="port-header">Portfolio</h1>
               <hr class="port-hr"/>
-              <img class="port-imgs" src="/Users/mixedguy/Desktop/Casework/Bootstrap-Portfolio/assets/images/Screen Shot 2018-02-15 at 3.44.44 PM.png" alt="">
+              <img class="port-imgs" src="/Users/mixedguy/Desktop/Casework/portfolio/assets/images/Screen Shot 2018-02-15 at 3.44.44 PM.png" alt="">
               <img class="port-imgs" src="/Users/mixedguy/Desktop/Casework/week-4-game/index.html" alt="">
               <img class="port-imgs" src="http://lorempixel.com/233/166" alt="">
               <img class="port-imgs" src="http://lorempixel.com/233/166" alt="">
