--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#" id="logo">Your Name</a>
+          <a class="navbar-brand" href="#" id="logo">Nathaniel Dent</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -76,9 +76,9 @@
                 <h1 class="connect-with-me-header">Connect With Me</h1>
                 <hr />
                 <div id="images">
-                  <img src="assets/imgs/github.png" alt="" class="connect-with-me-photo">
-                  <img src="assets/imgs/linkedin.png" alt="" class="connect-with-me-photo">
-                  <img src="assets/imgs/stackover2.png" alt="" class="connect-with-me-photo">
+                  <img src="assets/imgs/github-128.png" alt="" class="connect-with-me-photo">
+                  <img src="assets/imgs/linkedin-128.png" alt="" class="connect-with-me-photo">
+                  <img src="assets/imgs/stackoverflow-128.png" alt="" class="connect-with-me-photo">
                 </div>
               </div>
             </section>
@@ -94,7 +94,7 @@
     <footer class="footer">
       <div class="two-toned-footer-color"></div>
       <p class="text-muted text-muted-footer text-center">
-        &copy; Copyright 2017 Your Name
+        &copy; Copyright 2017 Nathaniel Dent
       </p>
     </footer>
     <!-- End of footer -->
