--- a/portfolio.html
+++ b/portfolio.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <title>Bootstrap Basic Portfolio</title>
+    <title>Nathaniel Dent Portfolio</title>
 
     <!-- Boostrap Stylesheet -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -32,7 +32,7 @@
               <span class="icon-bar"></span>
             </button>
             <div class="col-xs-12 phone-nav">
-              <a class="navbar-brand" href="#" id="logo">Your Name</a>
+              <a class="navbar-brand" href="#" id="logo">Nathaniel Dent</a>
             </div>
           </div>
 
@@ -57,11 +57,10 @@
             <section id="portfolio-area">
               <h1 class="port-header">Portfolio</h1>
               <hr class="port-hr"/>
-              <img class="port-imgs" src="/Users/mixedguy/Desktop/Casework/portfolio/assets/images/Screen Shot 2018-02-15 at 3.44.44 PM.png" alt="">
-              <img class="port-imgs" src="/Users/mixedguy/Desktop/Casework/week-4-game/index.html" alt="">
-              <img class="port-imgs" src="http://lorempixel.com/233/166" alt="">
-              <img class="port-imgs" src="http://lorempixel.com/233/166" alt="">
-              <img class="port-imgs" src="http://lorempixel.com/233/166" alt="">
+              <img class="port-imgs" src="assets/imgs/psychic.png"alt="">
+              <img class="port-imgs" src="assets/imgs/parking.png" alt="">
+              <img class="port-imgs" src="assets/imgs/bamzon.png" alt="">
+              <img class="port-imgs" src="assets/imgs/friendfinder.png" alt="">
             </section>
           </div>
           <div class="col-md-5">
@@ -72,9 +71,9 @@
                 <h1 class="connect-with-me-header">Connect With Me</h1>
                 <hr />
                 <div id="images">
-                  <img src="assets/imgs/github.png" alt="" class="connect-with-me-photo">
-                  <img src="assets/imgs/linkedin.png" alt="" class="connect-with-me-photo">
-                  <img src="assets/imgs/stackover2.png" alt="" class="connect-with-me-photo">
+                  <img src="assets/imgs/github-128.png" alt="" class="connect-with-me-photo">
+                  <img src="assets/imgs/linkedin-128.png" alt="" class="connect-with-me-photo">
+                  <img src="assets/imgs/stackoverflow-128.png" alt="" class="connect-with-me-photo">
                 </div>
               </div>
             </section>
@@ -90,7 +89,7 @@
     <footer class="footer">
       <div class="two-toned-footer-color"></div>
       <p class="text-muted text-muted-footer text-center">
-        &copy; Copyright 2017 Your Name
+        &copy; Copyright 2017 Nathaniel Dent
       </p>
     </footer>
     <!-- End of footer -->
