--- a/contact.html
+++ b/contact.html
@@ -76,9 +76,9 @@
                 <h1 class="connect-with-me-header">Connect With Me</h1>
                 <hr />
                 <div id="images">
-                  <img src="assets/imgs/github-128.png" alt="" class="connect-with-me-photo">
-                  <img src="assets/imgs/linkedin-128.png" alt="" class="connect-with-me-photo">
-                  <img src="assets/imgs/stackoverflow-128.png" alt="" class="connect-with-me-photo">
+                  <a href="https://github.com/NateDent"><img src="assets/imgs/github-128.png" alt="" class="connect-with-me-photo"></a>
+                  <a href="www.linkedin.com/in/nathanieldent"><img src="assets/imgs/linkedin-128.png" alt="" class="connect-with-me-photo"></a>
+                  <a href="https://stackoverflow.com/users/9269850/nated"><img src="assets/imgs/stackoverflow-128.png" alt="" class="connect-with-me-photo"></a>
                 </div>
               </div>
             </section>
@@ -94,7 +94,7 @@
     <footer class="footer">
       <div class="two-toned-footer-color"></div>
       <p class="text-muted text-muted-footer text-center">
-        &copy; Copyright 2017 Nathaniel Dent
+        &copy; Copyright 2018 Nathaniel Dent
       </p>
     </footer>
     <!-- End of footer -->
