--- a/index.html
+++ b/index.html
@@ -56,8 +56,11 @@
             <article class="about-me-content">
               <h1 class="about-me-header">About Me</h1>
               <hr class="about-me-hr"/>
-              <img src="assets/imgs/natebeach.jpeg" alt="" id="nate-image"/>
-              <p>My name is Nathaniel Dent. Id like this site to offer more, but sadly I am still learning, and thus a baby at web development. My goal is to piece this all together as time goes on</p>
+              <img src="assets/imgs/NatDawg.png" alt="" id="nate-image"/>
+              <p>My name is Nathaniel Dent.I am a Web Developer and entrepreneur living in 
+                Cleveland, Ohio. I enjoy developing because it challenges me to learn new things on a daily basis. I am an organic communicator and 
+                team player. When I am not working I enjoy spending time with my daughter,cooking and exercising.
+                </p>
               <br />
               <p></p>
             </article>
@@ -70,9 +73,9 @@
                 <h1 class="connect-with-me-header">Connect With Me</h1>
                 <hr />
                 <div id="images">
-                  <img src="assets/imgs/github.png" alt="" class="connect-with-me-photo">
-                  <img src="assets/imgs/linkedin.png" alt="" class="connect-with-me-photo">
-                  <img src="assets/imgs/stackover2.png" alt="" class="connect-with-me-photo">
+                  <a href="https://github.com/NateDent"><img src="assets/imgs/github-128.png" alt="" class="connect-with-me-photo"></a>
+                  <a href="www.linkedin.com/in/nathanieldent"><img src="assets/imgs/linkedin-128.png" alt="" class="connect-with-me-photo"></a>
+                  <a href="https://stackoverflow.com/users/9269850/nated"><img src="assets/imgs/stackoverflow-128.png" alt="" class="connect-with-me-photo"></a>
                 </div>
               </div>
             </section>
@@ -88,7 +91,7 @@
     <footer class="footer">
       <div class="two-toned-footer-color"></div>
       <p class="text-muted text-muted-footer text-center">
-        &copy; Copyright 2017 Your Name
+        &copy; Copyright 2018 Nathaniel Dent
       </p>
     </footer>
     <!-- End of footer -->
