--- a/portfolio.html
+++ b/portfolio.html
@@ -57,10 +57,11 @@
             <section id="portfolio-area">
               <h1 class="port-header">Portfolio</h1>
               <hr class="port-hr"/>
-              <img class="port-imgs" src="assets/imgs/psychic.png"alt="">
-              <img class="port-imgs" src="assets/imgs/parking.png" alt="">
-              <img class="port-imgs" src="assets/imgs/bamzon.png" alt="">
-              <img class="port-imgs" src="assets/imgs/friendfinder.png" alt="">
+              <a href="https://natedent.github.io/Psychic-Game/"><img class="port-imgs" src="assets/imgs/psychic.png"alt=""></a>
+              <a href="https://bootcamp-project-cwru.github.io/parking-project/"><img class="port-imgs" src="assets/imgs/parking.png" alt=""></a>
+              <a href="https://github.com/NateDent/Bamazon"><img class="port-imgs" src="assets/imgs/bamzon.png" alt=""></a>
+                <a href="https://natedent.github.io/Friend-finder/."><img class="port-imgs" src="assets/imgs/friendfinder.png" alt=""></a>
+                <a href="https://github.com/NateDent/Constructor-hangman"><img class="port-imgs" src="assets/imgs/construct.png" alt=""></a>
             </section>
           </div>
           <div class="col-md-5">
@@ -71,9 +72,9 @@
                 <h1 class="connect-with-me-header">Connect With Me</h1>
                 <hr />
                 <div id="images">
-                  <img src="assets/imgs/github-128.png" alt="" class="connect-with-me-photo">
-                  <img src="assets/imgs/linkedin-128.png" alt="" class="connect-with-me-photo">
-                  <img src="assets/imgs/stackoverflow-128.png" alt="" class="connect-with-me-photo">
+                  <a href="https://github.com/NateDent"><img src="assets/imgs/github-128.png" alt="" class="connect-with-me-photo"></a>
+                  <a href="www.linkedin.com/in/nathanieldent"><img src="assets/imgs/linkedin-128.png" alt="" class="connect-with-me-photo"></a>
+                  <a href="https://stackoverflow.com/users/9269850/nated"><img src="assets/imgs/stackoverflow-128.png" alt="" class="connect-with-me-photo"></a>
                 </div>
               </div>
             </section>
@@ -89,7 +90,7 @@
     <footer class="footer">
       <div class="two-toned-footer-color"></div>
       <p class="text-muted text-muted-footer text-center">
-        &copy; Copyright 2017 Nathaniel Dent
+        &copy; Copyright 2018 Nathaniel Dent
       </p>
     </footer>
     <!-- End of footer -->
