--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <div class="wrap">
       <div class="container">
         <section class="row">
-          <div class="col-md-8">
+          <div class="col-md-8" classname="about-div">
             <article class="about-me-content">
               <h1 class="about-me-header">About Me</h1>
               <hr class="about-me-hr"/>
