--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
               <h1 class="about-me-header">About Me</h1>
               <hr class="about-me-hr"/>
               <img src="assets/imgs/NatDawg.png" alt="" id="nate-image"/>
-              <p>My name is Nathaniel Dent.I am a Web Developer and entrepreneur living in 
+              <p>My name is Nathaniel Dent. I am a Web Developer and entrepreneur living in 
                 Cleveland, Ohio. I enjoy developing because it challenges me to learn new things on a daily basis. I am an organic communicator and 
                 team player. When I am not working I enjoy spending time with my daughter,cooking and exercising.
                 </p>
@@ -74,7 +74,7 @@
                 <hr />
                 <div id="images">
                   <a href="https://github.com/NateDent"><img src="assets/imgs/github-128.png" alt="" class="connect-with-me-photo"></a>
-                  <a href="www.linkedin.com/in/nathanieldent"><img src="assets/imgs/linkedin-128.png" alt="" class="connect-with-me-photo"></a>
+                  <a href="https://linkedin.com/in/nathanieldent"><img src="assets/imgs/linkedin-128.png" alt="" class="connect-with-me-photo"></a>
                   <a href="https://stackoverflow.com/users/9269850/nated"><img src="assets/imgs/stackoverflow-128.png" alt="" class="connect-with-me-photo"></a>
                 </div>
               </div>
