--- a/portfolio.html
+++ b/portfolio.html
@@ -73,7 +73,7 @@
                 <hr />
                 <div id="images">
                   <a href="https://github.com/NateDent"><img src="assets/imgs/github-128.png" alt="" class="connect-with-me-photo"></a>
-                  <a href="www.linkedin.com/in/nathanieldent"><img src="assets/imgs/linkedin-128.png" alt="" class="connect-with-me-photo"></a>
+                  <a href="https://linkedin.com/in/nathanieldent"><img src="assets/imgs/linkedin-128.png" alt="" class="connect-with-me-photo"></a>
                   <a href="https://stackoverflow.com/users/9269850/nated"><img src="assets/imgs/stackoverflow-128.png" alt="" class="connect-with-me-photo"></a>
                 </div>
               </div>
