--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#" id="logo">Nathaniel Dent</a>
+          <a class="navbar-brand" href="https://natedent.github.io/portfolio/" id="logo">Nathaniel Dent</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
