--- a/portfolio.html
+++ b/portfolio.html
@@ -32,7 +32,7 @@
               <span class="icon-bar"></span>
             </button>
             <div class="col-xs-12 phone-nav">
-              <a class="navbar-brand" href="#" id="logo">Nathaniel Dent</a>
+              <a class="navbar-brand" href="https://natedent.github.io/portfolio/" id="logo">Nathaniel Dent</a>
             </div>
           </div>
 
