--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
               <span class="icon-bar"></span>
             </button>
             <div class="col-xs-12 phone-nav">
-              <a class="navbar-brand" href="https://natedent.github.io/portfolio/" id="logo">Nathaneil Dent</a>
+              <a class="navbar-brand" href="https://natedent.github.io/portfolio/" id="logo">Nathaniel Dent</a>
             </div>
           </div>
 
